--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,8 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="https://ui.dev/images/favicon.png"
+      href="/images/battle.png"
+      
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
