--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/images/battle.png"
+      href="images/battle.png"
       
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
